gcc/testsuite/g++.dg/ext/pragma1.C
// PR c++/108504

"1"				// { dg-error "" }
#pragma GCC diagnostic push
